tests/fixtures/errors/invalid_gantt_unsupported_baseline.puml
@startgantt
Project starts the 2026-05-01
@endgantt
